--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
   <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
-  <script src="script.js"> </script>
+  <script src="script.js" async> </script>
 </head>
 <body>
 <form method="POST" action="#null" autocomplete="on">
