--- a/index.html
+++ b/index.html
@@ -11,46 +11,37 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <script src="script.js" async> </script>
 </head>
+	
 <body>
-<form method="POST" action="#null" autocomplete="on">
-	
+<form method="POST" action="#" autocomplete="on">
 <div id="sign">
-	
   <h2>Welcome to eBooks World</h2>
   <h3>Sign up & Get 10% Discount Coupon!!</h3>
-	
   <div>
     <label for="email">
       E-mail 
     </label>
   </div>
-	  
   <div>
     <input type="email" id="email" placeholder="Enter your eamil">
   </div>
-	
   <div>
    <label for="phone">
     Phone number 
    </label>
   </div>
-	  
   <div>
     <input type="text" id="phone" size="15" placeholder="Enter your phone number">
   </div>
-	
   <div>
    <label for="birth">
     Date of Birth
    </label>
   </div>
-		
   <div>
     <input type="date" id="birth">
   </div>
-	
   <div><input type="button" value="Create Account" id="safe" onClick="myAccount()"></div>
-  
 </div>
 </form>
 </body>
